# rust_pageviews

./: Cargo.toml
migrations/2019-09-13-102221_initialize/: down.sql  up.sql
rocket-app/: Cargo.toml
rocket-app/src/: cors.rs  main.rs  models.rs  routes.rs
