[package]
name = "rust_pageviews"
version = "0.1.0"
authors = ["gruneneune@gmail.com <gruneneune@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] } #date/time
diesel = { version = "1.4.2", features = ["chrono"] } #mysql connection
lazy_static = "1.3.0" # lazy static initialisation
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", features = ["json", "diesel_mysql_pool"]}
serde_json = "1.0.39" #serialisation/deserialisation
serde = "1.0.90"
serde_derive = "1.0.90"